// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": -10000n,
    "amount1": 10032n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "ecdsa_builtin_applications": 1,
    "memory_holes": 7171,
    "pedersen_builtin_applications": 59,
    "range_check_builtin_applications": 2195,
    "steps": 43826,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374650381441171457n,
  "tick_after": 0n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": 10032n,
    "amount1": -10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 81,
    "ecdsa_builtin_applications": 1,
    "memory_holes": 16439,
    "pedersen_builtin_applications": 60,
    "range_check_builtin_applications": 2231,
    "steps": 54855,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374564482095251456n,
  "tick_after": -1n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": -1000000000000000000n,
    "amount1": 1003009027093903486n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "ecdsa_builtin_applications": 1,
    "memory_holes": 8957,
    "pedersen_builtin_applications": 61,
    "range_check_builtin_applications": 2171,
    "steps": 46377,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366925233430759428817540393170906n,
  "tick_after": 0n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": -1000000000000000000n,
    "amount1": 1003009027093903486n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "ecdsa_builtin_applications": 1,
    "memory_holes": 10020,
    "pedersen_builtin_applications": 64,
    "range_check_builtin_applications": 2595,
    "steps": 50718,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366925233430759428817540393170906n,
  "tick_after": 0n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 1003009027093903486n,
    "amount1": -1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 54,
    "ecdsa_builtin_applications": 1,
    "memory_holes": 11717,
    "pedersen_builtin_applications": 61,
    "range_check_builtin_applications": 2295,
    "steps": 50335,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366916643496167374607431768211456n,
  "tick_after": -1n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 1003009027093903486n,
    "amount1": -1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 54,
    "ecdsa_builtin_applications": 1,
    "memory_holes": 13638,
    "pedersen_builtin_applications": 64,
    "range_check_builtin_applications": 2517,
    "steps": 54899,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366916643496167374607431768211456n,
  "tick_after": -1n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "memory_holes": 1450,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16919,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "memory_holes": 1450,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16912,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 10000n,
    "amount1": -9969n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 81,
    "ecdsa_builtin_applications": 1,
    "memory_holes": 16692,
    "pedersen_builtin_applications": 60,
    "range_check_builtin_applications": 2165,
    "steps": 54805,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374564610944270337n,
  "tick_after": -1n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": -9969n,
    "amount1": 10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "ecdsa_builtin_applications": 1,
    "memory_holes": 7451,
    "pedersen_builtin_applications": 59,
    "range_check_builtin_applications": 2140,
    "steps": 43762,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374650252592152576n,
  "tick_after": 0n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -996999999987453842n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 54,
    "ecdsa_builtin_applications": 1,
    "memory_holes": 11936,
    "pedersen_builtin_applications": 61,
    "range_check_builtin_applications": 2237,
    "steps": 50302,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366916656381069316492767631040557n,
  "tick_after": -1n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -996999999987453842n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 54,
    "ecdsa_builtin_applications": 1,
    "memory_holes": 13857,
    "pedersen_builtin_applications": 64,
    "range_check_builtin_applications": 2459,
    "steps": 54866,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366916656381069316492767631040557n,
  "tick_after": -1n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": -996999999987453842n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "ecdsa_builtin_applications": 1,
    "memory_holes": 9217,
    "pedersen_builtin_applications": 61,
    "range_check_builtin_applications": 2121,
    "steps": 46323,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366925220545857486607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": -996999999987453842n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "ecdsa_builtin_applications": 1,
    "memory_holes": 10280,
    "pedersen_builtin_applications": 64,
    "range_check_builtin_applications": 2545,
    "steps": 50664,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366925220545857486607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 79228162514264337593543950336n,
    "amount1": -39554570869665270195675172000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 54,
    "ecdsa_builtin_applications": 1,
    "memory_holes": 12594,
    "pedersen_builtin_applications": 60,
    "range_check_builtin_applications": 2385,
    "steps": 51735,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 170396778628411849505946223051528149971n,
  "tick_after": -1383293n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": -39554570869665270195675172000n,
    "amount1": 79228162514264337593543950336n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "ecdsa_builtin_applications": 1,
    "memory_holes": 6379,
    "pedersen_builtin_applications": 59,
    "range_check_builtin_applications": 2356,
    "steps": 44038,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 679543886741114111536359091036980510720n,
  "tick_after": 1383292n,
}
`;
